tests/neg/i3430.scala
object Test extends App {

  println(Nil.min) // error: no implicit found

}
